# AI-

./: .dockerignore  .gitignore  .mise.toml  AI驱动简历制作应用开发深度调研报告.md  ALERTING_GUIDE.md  CI_CD_GUIDE.md  DELIVERY_SUMMARY.md  DEPLOY-PRODUCTION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_VERIFICATION.md  DEVLOG.md  DEVOPS_DAILY_SUMMARY.md  DEVOPS_DAILY_WORK_SUMMARY.md  DEVOPS_DELIVERY_SUMMARY.md  DEVOPS_EXECUTION_PLAN.md  DEVOPS_EXECUTIVE_SUMMARY.md  DEVOPS_FINAL_SUMMARY.md  DEVOPS_FINAL_SUMMARY_2026-04-06.md  DEVOPS_GUIDE.md  DEVOPS_INDEX.md  DEVOPS_LIVE_STATUS.md  DEVOPS_NEXT_PHASES.md  DEVOPS_QUICK_REFERENCE.md  DEVOPS_READINESS_CHECK.md  DEVOPS_ROADMAP.md  DEVOPS_STATUS_UPDATE_2026-04-06.md  DEVOPS_STATUS_UPDATE_2026-04-06_1304.md  DEVOPS_STATUS_UPDATE_2026-04-06_1330.md  DEVOPS_STATUS_UPDATE_2026-04-06_1809.md  DEVOPS_STATUS_UPDATE_2026-04-06_1818.md  DEVOPS_STATUS_UPDATE_2026-04-06_1900.md  DEVOPS_TOOLS_INDEX.md  DEVOPS_TOOLS_INDEX_READY.md  DEVOPS_WORK_SUMMARY.md  DOCKER_DELIVERY_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_REFERENCE.md  DOKPLOY_DEPLOYMENT_FIX.md  DOKPLOY_MANUAL_STEPS.md  (+85 more)
ai-resume-desktop/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ai-resume-desktop/src-tauri/: Cargo.toml  tauri.conf.json
ai-resume-desktop/src-tauri/icons/: icon.icns
ai-resume-desktop/src-tauri/src/: lib.rs  main.rs
ai-resume-flutter/: README.md  aliyun-init.gradle  analysis_options.yaml  pubspec.yaml
ai-resume-harmonyos/: CI_CD_COMPLETION_SUMMARY.md  CI_CD_SETUP.md  DELIVERY_CHECKLIST.md  DEVELOPMENT.md  (+20 more)
(+614 files in other folders)
