[package]
name = "ai-resume-desktop"
version = "1.0.0"
description = "AI 简历智能生成平台 - 桌面版"
authors = ["AI Resume Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "shell-open"] }
tauri-plugin-shell = "1"
tauri-plugin-dialog = "1"
tauri-plugin-fs = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tauri = { version = "1.6", features = ["shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
